feat: list 21 -> list 8